add open nav and fix any bugs in header

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <!-- header -->
     <script src="components/header/languageCurrency.js" defer></script>
     <script src="components/header/logo.js" defer></script>
+    <script src="components/sideNavigation/openNav.js" defer></script>
     <!-- title-el -->
     <link rel="stylesheet" href="components/title/swiper.css">
     <script src="components/title/swiper.js"></script>
