add side navigation for desktops and bix laptops , and fix bugs with media query for logo and side navigation bar

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <script src="components/header/languageCurrency.js" defer></script>
     <script src="components/header/logo.js" defer></script>
     <script src="components/sideNavigation/openNav.js" defer></script>
+    <script src="components/sideNavigation/nav-value.js" defer></script>
+    <script src="components/sideNavigation/hideNavbar.js"></script>
     <!-- title-el -->
     <link rel="stylesheet" href="components/title/swiper.css">
     <script src="components/title/swiper.js"></script>
