--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="./assets/fav-Icon.ico" />
     <title>CosmoTech - Գլխավոր</title>
+    <!-- styles -->
+    <link rel="stylesheet" href="components/title/swiper.css">
     <!-- Individual Settings -->
     <style scoped lang="scss">
       .mobile-nav-child a:nth-child(1) {
@@ -15,16 +17,12 @@
     }
     </style>
     <!-- scripts -->
-    <!-- header -->
     <script src="components/header/languageCurrency.js" defer></script>
     <script src="components/header/logo.js" defer></script>
     <script src="components/sideNavigation/openNav.js" defer></script>
     <script src="components/sideNavigation/nav-value.js" defer></script>
-    <script src="components/sideNavigation/hideNavbar.js"></script>
-    <!-- title-el -->
-    <link rel="stylesheet" href="components/title/swiper.css">
-    <script src="components/title/swiper.js"></script>
-    <!-- footer -->
+    <script src="components/sideNavigation/hideNavbar.js" defer></script>
+    <script src="components/title/swiper.js" defer></script>
   </head>
   <body>
     <div id="index"></div>
