bux fixes routing fixes

--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="./assets/fav-Icon.ico" />
+    <link rel="icon" href="./assets/cosmo-small.webp" />
     <title>CosmoTech - Գլխավոր</title>
-    <!-- styles -->
-    <link rel="stylesheet" href="components/title/swiper.css">
-    <!-- Individual Settings -->
-    <style scoped lang="scss">
-      .mobile-nav-child a:nth-child(1) {
-        path {
-          stroke: var(--mobile-nav-buttons-active) !important;
-        }
-    }
-    </style>
-    <!-- scripts -->
-    <script src="components/header/languageCurrency.js" defer></script>
-    <script src="components/header/logo.js" defer></script>
-    <script src="components/sideNavigation/openNav.js" defer></script>
-    <script src="components/sideNavigation/nav-value.js" defer></script>
-    <script src="components/sideNavigation/hideNavbar.js" defer></script>
-    <script src="components/title/swiper.js" defer></script>
   </head>
   <body>
-    <div id="index"></div>
+    <div id="app"></div>
   </body>
 </html>
